fix(orderedList): removed right align and updated left margin

--- a/packages/styles/scss/themes/expressive/components/_list.scss
+++ b/packages/styles/scss/themes/expressive/components/_list.scss
@@ -19,9 +19,7 @@
   .#{$prefix}--list--ordered:not(.#{$prefix}--list--nested) {
     > .#{$prefix}--list__item {
       &::before {
-        left: auto;
-        right: 100%;
-        margin-right: $carbon--spacing-03;
+        left: -1.875rem;
       }
     }
   }
